# aragon-cuts

./: .gitignore  .npmrc  HANDOFF.md  LICENSE  NOTICE.md  README.md  dev.bat  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
scripts/: setup-ffmpeg.ps1
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ffmpeg.rs  ffprobe.rs  mod.rs  nvenc_check.rs  thumbnails.rs
src/components/BatchQueue/: BatchQueue.tsx
src/components/Sidebar/: Sidebar.tsx
src/components/Timeline/: Timeline.tsx
src/components/TopBar/: TopBar.tsx
src/components/VideoPreview/: VideoPreview.tsx
src/lib/: time.ts
src/types/: clip.ts  video.ts
