[package]
name = "shorts-maker"
version = "0.2.0"
description = "Convert horizontal videos to vertical 9:16 clips"
authors = ["aragon"]
edition = "2021"

[lib]
name = "shorts_maker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sha1 = "0.10"
hex = "0.4"
thiserror = "2"
anyhow = "1"
